advantages for mobile

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,19 @@
 
- <section class="advanteges">
+ <section class="advantages">
     <div class="container">
         <h2 class="visually-hidden">advanteges</h2>
-        <ul class="advantges_item">
-            <li class="advanteges_list sunny list">
-                <p class="advanteges_title title">721</p>
-                <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <ul class="advantages_list list">
+            <li class="advantages_item list">
+                <p class="advantages_title sunny title">721</p>
+                <p class="advantages_text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advanteges_list apple list">
-                <p class="advanteges_title title">16kg</p>
-                <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            <li class="advantages_item list">
+                <p class="advantages_title apple title">16kg</p>
+                <p class="advantages_text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advanteges_list hurts list">
-                <p class="advanteges_title title">84</p>
-                <p class="advanteges-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            <li class="advantages_item list">
+                <p class="advantages_title hurts title">84</p>
+                <p class="advantages_text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
     </div>
