--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,37 +4,61 @@
     <h2 class="title">products</h2>
     <ul class="products-list">
       <li class="products-item pink">
-        <h3 class="products-item-name">ice cream</h3>
-        <div class="products-item-point"></div>
-        <p class="products-item-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-        <button type="button" class="button-products">
-          <span class="right-arrow">&#10132;</span>
-        </button>
+        <div class="overlay">
+          <h3 class="products-item-name">ice cream</h3>
+          <div class="products-item-point"></div>
+          <p class="products-item-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <button type="button" class="button-products">
+            <span class="right-arrow">&#10132;</span>
+            <p class="overlay-text-pink">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et. dolore magna aliqua
+              facilisis.
+            </p>
+          </button>
+        </div>
       </li>
       <li class="products-item gold">
-        <h3 class="products-item-name">ice coffee</h3>
-        <div class="products-item-point"></div>
-        <p class="products-item-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-        <button type="button" class="button-products">
-          <span class="right-arrow">&#10132;</span>
-        </button>
+        <div class="overlay">
+          <h3 class="products-item-name">ice coffee</h3>
+          <div class="products-item-point"></div>
+          <p class="products-item-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <button type="button" class="button-products">
+            <span class="right-arrow">&#10132;</span>
+            <p class="overlay-text-gold">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et. dolore magna aliqua
+              facilisis.
+            </p>
+          </button>
+        </div>
       </li>
       <li class="products-item green">
-        <h3 class="products-item-name">milkshakes</h3>
-        <div class="products-item-point"></div>
-        <p class="products-item-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-        <button type="button" class="button-products">
-          <span class="right-arrow">&#10132;</span>
-        </button>
+        <div class="overlay">
+          <h3 class="products-item-name">milkshakes</h3>
+          <div class="products-item-point"></div>
+          <p class="products-item-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <button type="button" class="button-products">
+            <span class="right-arrow">&#10132;</span>
+            <p class="overlay-text-green">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et. dolore magna aliqua
+              facilisis.
+            </p>
+          </button>
+        </div>
       </li>
     </ul>
   </div>
