--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -31,12 +31,47 @@
   align-items: center;
   flex-direction: column;
   padding: 160px 40px 41px 40px;
-  // padding-bottom: 41px;
-  // height: 485px;
-  // min-width: 280px;
-  // max-width: 320px;
   position: relative;
   border-radius: 24px;
+
+  .overlay {
+    width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.overlay-text-pink,
+.overlay-text-gold,
+.overlay-text-green {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: $main-font-family;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: $bg-main;
+
+
+ 
+  @media screen and (min-width: 768px) {
+    line-height: 1.76;
+    overflow: hidden;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  }
+}
 
   @media screen and (min-width: 768px) {
     padding: 152px 11px 40px 11px;
@@ -78,6 +113,8 @@
     background-color: $bg-green;
   }
 }
+
+
 
 .products-item-name {
   font-family: $title-font-family;
@@ -327,6 +364,7 @@
 }
 
 .button-products {
+  margin: 0 auto;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -338,6 +376,30 @@
   cursor: pointer;
   background-color: $bg-main;
   transition: all 300ms linear;
+  
+  &:hover .overlay-text-pink,
+  &:focus .overlay-text-pink {
+    transform: translateX(0);
+    background: $bg-hero;
+    padding: 0;
+    animation: fadeInLeftBig 1000ms  cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
+  &:hover .overlay-text-gold,
+  &:focus .overlay-text-gold {
+    transform: translateX(0);
+    background: $bg-gold;
+    padding: 0;
+    animation: fadeInLeftBig 1000ms  cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
+  &:hover .overlay-text-green,
+  &:focus .overlay-text-green {
+    transform: translateX(0);
+    background: $bg-green;
+    padding: 0;
+     animation: fadeInLeftBig 1000ms  cubic-bezier(0.4, 0, 0.2, 1); 
+  }
 
   &:hover,
   &:focus {
