--- a/src/sass/_about-modal.scss
+++ b/src/sass/_about-modal.scss
@@ -1,77 +1,4 @@
-@keyframes milk{
-    0%{
-// transform: rotate(0deg);
-margin-top: -80px;
-opacity: 0.0;
-// transform: rotate(180deg);
-    }
-25%{
-    opacity: 0.5;
-    transform: rotate(0deg)
-}
-40%{
-    opacity: 0.0;
-}
-50%{
-    margin-top: 350px;
-    opacity: 0.0;
-    transform: rotate(180deg);
-}
-75%{
-   opacity: 0.5;
-   transform: rotate(180deg); 
-}
-90%{
-    opacity: 0.0;
-}
-    100%{
-transform: rotate(360deg);
-margin-top: -80px;
-opacity: 0.0;
-// transform: rotate(0deg)
-    } 
-}
-@keyframes text{
-    0%{
-font-weight: 700;
-font-size: 14px;
-line-height: 1.74;
-letter-spacing: 0.04em;
-width: 350px;
-margin-top: -40px;
-    }
-50%{
-font-weight: 700;
-font-size: 14px;
-width: 350px;
-margin-top: 30px;
-line-height: 1.74;
-}
-    100%{
-font-weight: 700;
-font-size: 14px;
-line-height: 1.74;
-letter-spacing: 0.04em;
-width: 350px;
-margin-top: -40px;
-    } 
-}
-@keyframes title-about{
-    0%{
-color: #ac2f2f;
-; 
-letter-spacing: 0.04em;
-    }
-50%{
-color: #ec8da3;
-letter-spacing: 0.08em; 
-}
-    100%{
-color: #ac2f2f;
-; 
-letter-spacing: 0.04em;
-    } 
-}
+
 .about-backdrop{
     position: fixed;
     z-index: 100;
@@ -89,6 +16,10 @@ letter-spacing: 0.04em;
   left: 50%;
   top: 50%;
   padding: 20px;
+  overflow: scroll;
+  background-image: url("../images/images/about/bio-eco/biomilkDecktop@1x.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   transform: translate(-50%, -50%);
   background-color: #f0e6e6;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -136,9 +67,6 @@ letter-spacing: 0.04em;
 text-transform: uppercase;
 margin-top: 20px;
 color: #ec8da3; 
-animation-name: title-about;
-    animation-duration: 1000ms;
-    animation-iteration-count: infinite;
 }
 .about-img-modal{
     width: 470px;
@@ -153,12 +81,8 @@ animation-name: title-about;
     max-width: 100%;
     filter: alpha(Opacity=50);
     opacity: 0.5;
-    animation-name: milk;
-    animation-duration: 6000ms;
-    animation-iteration-count: infinite;
 }
 .modal-text{
-    position: absolute;
     font-family: DM Sans;
 font-style: normal;
 font-weight: 500;
@@ -169,11 +93,6 @@ letter-spacing: 0.04em;
 color: #907E82;
     text-align: center;
     width: 350px;
-    margin-top: 5px;
-    left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  animation-name: text;
-    animation-duration: 6000ms;
-    animation-iteration-count: infinite;
+    margin-top: 120px;
+   
 }
