--- a/src/sass/_page-header.scss
+++ b/src/sass/_page-header.scss
@@ -137,13 +137,16 @@
 .menu-mobile-close {
   width: 18px;
   height: 18px;
-  padding: 4px;
   background-color: transparent;
   border: none;
   border-radius: 50%;
   position: absolute;
-  top: 35px;
-  right: 40px;
+  top: 20px;
+  right: 70px;
+  @media screen and (min-width:768px) {
+    top: 30px;
+     right: 150px;    
+  }
 }
 .arrow-btn {
   margin-left: 18px;
