--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,131 +1,136 @@
 <section class="customer-reviews">
     <div class="container">
-        <div class="customer-reviews__wrappers">
-            <h2 class="customer-reviews__heading">Customer-reviews</h2>
-            <div class="customer-reviews__wrapper">
+        <h2 class="customer-reviews__heading">Customer-reviews</h2>
+        <ul class="customer-reviews__wrappers">
+            <li class="customer-reviews__wrapper">
                 <picture class="customer-reviews__photo">
-                <source srcset="
+                    <source srcset="
                         ../src/images/customer-reviews/latin-girl.webp   1x,
                         ../src/images/customer-reviews/latin-girl@2x.webp 2x
                       " media="(min-width: 1200px)" type="image/webp" />
-                <source srcset="
+                    <source srcset="
                         ../src/images/customer-reviews/latin-girl.png   1x,
                         ../src/images/customer-reviews/latin-girl@2x.png 2x
                       " media="(min-width: 1200px)" />
-                <img class="custumer-reviews__images" src="../src/images/customer-reviews/latin-girl.png"
-                    alt="Black-girl" />
-            </picture>
-            <div class="customer-reviews__text">
-                <p class="customer-reviews__text-review"><span class="customer-reviews__text-review-lines">Nullam viverra consectetuer. Quisque cursus et, porttitor
-                    risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                    congue. Lorem ipsum primis in nibh vel risus.</span></p>
-                <div class="customer-reviews__scroll-dots">
-                    <svg class="scroll-dot" width="4" height="4">
+                    <img class="custumer-reviews__images" src="../src/images/customer-reviews/latin-girl.png"
+                        alt="Latin-girl" />
+                </picture>
+                <div class="customer-reviews__text">
+                    <p class="customer-reviews__text-review"><span class="customer-reviews__text-review-lines">Nullam
+                            viverra consectetuer. Quisque cursus et, porttitor
+                            risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                            congue. Lorem ipsum primis in nibh vel risus.</span></p>
+                    <div class="customer-reviews__scroll-dots">
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                    </div>
+                    <p class="customer-reviews__text-about">Emily, Los Angeles</p>
+                </div>
+                <div class="customers-review__page-dots">
+                    <svg class="page-dot__home" width="12" height="12">
+                        <use href="./images/sprite.svg#home"></use>
+                    </svg>
+                    <svg class="page-dot" width="12" height="12">
                         <use href="./images/sprite.svg#point"></use>
                     </svg>
-                    <svg class="scroll-dot" width="4" height="4">
-                        <use href="./images/sprite.svg#point"></use>
-                    </svg>
-                    <svg class="scroll-dot" width="4" height="4">
+                    <svg class="page-dot" width="12" height="12">
                         <use href="./images/sprite.svg#point"></use>
                     </svg>
                 </div>
-                <p class="customer-reviews__text-about">Emily, Los Angeles</p>
-            </div>
-            <div class="customers-review__page-dots">
-                <svg class="page-dot__home" width="12" height="12">
-                    <use href="./images/sprite.svg#home"></use>
-                </svg>
-                <svg class="page-dot" width="12" height="12">
-                    <use href="./images/sprite.svg#point"></use>
-                </svg>
-                <svg class="page-dot" width="12" height="12">
-                    <use href="./images/sprite.svg#point"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="customer-reviews__wrapper">
-            <picture class="customer-reviews__photo">
-                <source srcset="
+            </li>
+            <li class="customer-reviews__wrapper">
+                <picture class="customer-reviews__photo">
+                    <source srcset="
                                 ../src/images/customer-reviews/black-girl.webp   1x,
                                 ../src/images/customer-reviews/black-girl@2x.webp 2x
                               " media="(min-width: 1200px)" type="image/webp" />
-                <source srcset="
+                    <source srcset="
                                 ../src/images/customer-reviews/black-girl.png   1x,
                                 ../src/images/customer-reviews/black-girl@2x.png 2x
                               " media="(min-width: 1200px)" />
-                <img class="custumer-reviews__images" src="../src/images/customer-reviews/black-girl.png" alt="Black-girl" />
-            </picture>
-            <div class="customer-reviews__text">
-                <p class="customer-reviews__text-review"><span class="customer-reviews__text-review-lines">Nullam viverra consectetuer. Quisque cursus et, porttitor
-                    risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                    congue. Lorem ipsum primis in nibh vel risus.</span></p>
-                <div class="customer-reviews__scroll-dots">
-                    <svg class="scroll-dot" width="4" height="4">
+                    <img class="custumer-reviews__images" src="../src/images/customer-reviews/black-girl.png"
+                        alt="Black-girl" />
+                </picture>
+                <div class="customer-reviews__text">
+                    <p class="customer-reviews__text-review"><span class="customer-reviews__text-review-lines">Nullam
+                            viverra consectetuer. Quisque cursus et, porttitor
+                            risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                            congue. Lorem ipsum primis in nibh vel risus.</span></p>
+                    <div class="customer-reviews__scroll-dots">
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                    </div>
+                    <p class="customer-reviews__text-about">Hanna, New York</p>
+                </div>
+                <div class="customers-review__page-dots">
+                    <svg class="page-dot__home" width="12" height="12">
+                        <use href="./images/sprite.svg#home"></use>
+                    </svg>
+                    <svg class="page-dot" width="12" height="12">
                         <use href="./images/sprite.svg#point"></use>
                     </svg>
-                    <svg class="scroll-dot" width="4" height="4">
-                        <use href="./images/sprite.svg#point"></use>
-                    </svg>
-                    <svg class="scroll-dot" width="4" height="4">
+                    <svg class="page-dot" width="12" height="12">
                         <use href="./images/sprite.svg#point"></use>
                     </svg>
                 </div>
-                <p class="customer-reviews__text-about">Hanna, New York</p>
-            </div>
-            <div class="customers-review__page-dots">
-                <svg class="page-dot__home" width="12" height="12">
-                    <use href="./images/sprite.svg#home"></use>
-                </svg>
-                <svg class="page-dot" width="12" height="12">
-                    <use href="./images/sprite.svg#point"></use>
-                </svg>
-                <svg class="page-dot" width="12" height="12">
-                    <use href="./images/sprite.svg#point"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="customer-reviews__wrapper">
-            <picture class="customer-reviews__photo">
-                <source srcset="
+            </li>
+            <li class="customer-reviews__wrapper">
+                <picture class="customer-reviews__photo">
+                    <source srcset="
                                 ../src/images/customer-reviews/white-girl.webp   1x,
                                 ../src/images/customer-reviews/white-girl@2x.webp 2x
                               " media="(min-width: 1200px)" type="image/webp" />
-                <source srcset="
+                    <source srcset="
                                 ../src/images/customer-reviews/white-girl.png   1x,
                                 ../src/images/customer-reviews/white-girl@2x.png 2x
                               " media="(min-width: 1200px)" />
-                <img class="custumer-reviews__images" src="../src/images/customer-reviews/white-girl.png" alt="Black-girl" />
-            </picture>
-            <div class="customer-reviews__text"> 
-                <p class="customer-reviews__text-review "> <span class="customer-reviews__text-review-lines">Nullam viverra consectetuer. Quisque cursus et, porttitor
-                    risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-                    congue. Lorem ipsum primis in nibh vel risus.</span></p>
-                <div class="customer-reviews__scroll-dots">
-                    <svg class="scroll-dot" width="4" height="4">
+                    <img class="custumer-reviews__images" src="../src/images/customer-reviews/white-girl.png"
+                        alt="White-girl" />
+                </picture>
+                <div class="customer-reviews__text">
+                    <p class="customer-reviews__text-review "> <span class="customer-reviews__text-review-lines">Nullam
+                            viverra consectetuer. Quisque cursus et, porttitor
+                            risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                            congue. Lorem ipsum primis in nibh vel risus.</span></p>
+                    <div class="customer-reviews__scroll-dots">
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                        <svg class="scroll-dot" width="4" height="4">
+                            <use href="./images/sprite.svg#point"></use>
+                        </svg>
+                    </div>
+                    <p class="customer-reviews__text-about">Amanda, Canada</p>
+                </div>
+                <div class="customers-review__page-dots">
+                    <svg class="page-dot__home" width="12" height="12">
+                        <use href="./images/sprite.svg#home"></use>
+                    </svg>
+                    <svg class="page-dot" width="12" height="12">
                         <use href="./images/sprite.svg#point"></use>
                     </svg>
-                    <svg class="scroll-dot" width="4" height="4">
-                        <use href="./images/sprite.svg#point"></use>
-                    </svg>
-                    <svg class="scroll-dot" width="4" height="4">
+                    <svg class="page-dot" width="12" height="12">
                         <use href="./images/sprite.svg#point"></use>
                     </svg>
                 </div>
-                <p class="customer-reviews__text-about">Amanda, Canada</p>
-            </div>
-            <div class="customers-review__page-dots">
-                <svg class="page-dot__home" width="12" height="12">
-                    <use href="./images/sprite.svg#home"></use>
-                </svg>
-                <svg class="page-dot" width="12" height="12">
-                    <use href="./images/sprite.svg#point"></use>
-                </svg>
-                <svg class="page-dot" width="12" height="12">
-                    <use href="./images/sprite.svg#point"></use>
-                </svg>
-            </div>
-        </div>
-        </div>
+            </li>
+    </div>
     </div>
 </section>
