--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -1,9 +1,11 @@
+  
 .customer-reviews__photo {
   margin-bottom: 30px;
 }
 
 .customer-reviews__wrappers {
-  background-color: transparent;
+padding-top: 80px;
+padding-bottom: 86px;
 }
 
 .customer-reviews__wrapper,
@@ -17,17 +19,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  
-}
 
-
-.customer-reviews {
-  margin-top: 80px;
-  margin-bottom: 86px;
 }
 
 .customer-reviews__text-review {
-  
+    background: transparent url('/images/quotes.png') no-repeat ;
+background-position: 61px 28px;
   font-size: 12px;
   background-color: var(--bg-feedback);
   line-height: 2.58;
@@ -36,7 +33,6 @@
   padding-bottom: 26px;
   padding-left: 86px;
   padding-right: 77px;
-
 
 }
 
@@ -54,20 +50,6 @@
   line-height: 2.58;
 }
 
-.customer-reviews__text::before{
-display: flex;
-position: absolute;
-  top: 28px;
-  left: 61px;
-  width: 54px;
-  height: 40px;
-  content: url( "../images/sprite.svg#quotes");
-  fill: var(--border-color);
-  fill: black;
-transform: rotate(-180deg);
-z-index: 2;
-background-color: rgba(245, 245, 245, .7);
-}
 
 .customer-reviews__heading {
   display: none;
