--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -26,7 +26,17 @@
 
                 <!-- Валентина -->
                 <div class="coutn-wraper">
-                    <ul class="hero-small-list list">
+                       <div class="first-count">
+                        <p class="hero-number">16</p>
+                        <p class="hero-rest">cafes</p>
+                       </div> 
+
+                       <div class="second-count">
+                        <p class="hero-number">23</p>
+                        <p class="hero-rest">food trucks</p> 
+                    </div>
+
+                    <!-- <ul class="hero-small-list list">
                         <li class="hero-small-item">
                             <p class="hero-number">16</p>
                             <p class="hero-rest">cafes</p>
@@ -35,7 +45,7 @@
                             <p class="hero-number">23</p>
                             <p class="hero-rest">food trucks</p>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
                 
                 <!-- END Валентина -->
@@ -47,11 +57,11 @@
                     <picture>
                         <source srcset="./images/hero/ice/ice-cream-desktop-pic.webp 1x, 
                                         ./images/hero/ice/ice-cream-desktop-pic@2x.webp 2x"
-                                        media="(min-width:1200px)" 
+                                        media="(min-width:1280px)" 
                                         type="image/webp">                
                             <source srcset="./images/hero/ice/ice-cream-desktop-pic.png 1x, 
                                             ./images/hero/ice/ice-cream-desktop-pic@2x.png 2x" 
-                                        media="(min-width:1200px)">
+                                        media="(min-width:1280px)">
             
                         
                         <source srcset="./images/hero/ice/ice-cream-tablet-pic.webp 1x, 
@@ -80,11 +90,11 @@
                     <picture>
                         <source srcset="./images/hero/girl/girl-desktop-pic.webp 1x, 
                                         ./images/hero/girl/girl-desktop-pic@2x.webp 2x"
-                                        media="(min-width:1200px)" 
+                                        media="(min-width:1280px)" 
                                         type="image/webp">                
                             <source srcset="./images/hero/girl/girl-desktop-pic.png 1x, 
                                             ./images/hero/girl/girl-desktop-pic@2x.png 2x" 
-                                        media="(min-width:1200px)">
+                                        media="(min-width:1280px)">
             
                         
                         <source srcset="./images/hero/girl/girl-tablet-pic.webp 1x, 
@@ -103,11 +113,11 @@
                     <picture>
                         <source srcset="./images/hero/milk/milk-desktop-pic.webp 1x, 
                                         ./images/hero/milk/milk-desktop-pic@2x.webp 2x"
-                                        media="(min-width:1200px)" 
+                                        media="(min-width:1280px)" 
                                         type="image/webp">                
                             <source srcset="./images/hero/milk/milk-desktop-pic.png 1x, 
                                             ./images/hero/milk/milk-desktop-pic@2x.png 2x" 
-                                        media="(min-width:1200px)">
+                                        media="(min-width:1280px)">
             
                         
                         <source srcset="./images/hero/milk/milk-tablet-pic.webp 1x, 
