--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -2,13 +2,16 @@
   width: 100%;
   position: absolute;
   padding-top: 6px;
+
   @media screen and (min-width: $tablet) {
     padding-top: 38px;
   }
 }
+
 .navigation {
   &__menu {
     display: none;
+
     @media screen and(min-width:$desktop) {
       display: flex;
       justify-content: center;
@@ -17,6 +20,7 @@
       z-index: 500;
     }
   }
+
   &__item {
     margin: 17.5px;
   }
@@ -31,11 +35,13 @@
     transition: color $trans-duration $trans-time-func;
     color: $white-color;
   }
+
   &__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
+
   &__link:focus,
   &__link:hover {
     color: $accent-red-color;
@@ -69,7 +75,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 60px 20px 0 21px;
+  padding-top: 60px;
   background-color: $background-color-mob-menu;
   width: 250px;
   height: 100vh;
@@ -86,6 +92,10 @@
     visibility: revert;
     opacity: 1;
     pointer-events: all;
+  }
+
+  &__packing-btn {
+    text-align: center;
   }
 
   @media screen and (min-width: $tablet) {
@@ -126,14 +136,18 @@
       //   display: inline-block;
       width: 91px;
     }
+
     &__packing-btn {
+      text-align: center;
       display: flex;
       justify-content: center;
       align-items: baseline;
     }
   }
+
   &__buy-btn-tab {
     display: none;
+
     @media screen and(min-width:$tablet) {
       display: flex;
       justify-content: center;
@@ -182,6 +196,7 @@
     border-bottom: 1px solid #e18298;
   }
   &__link {
+    padding-left: 21px;
     width: 100%;
     color: $white-color;
     font-size: 14px;
