--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
 
-                <!-- Валентина -->
+                <!-- COUNT -->
                 <div class="coutn-wraper">
                        <div class="first-count">
                         <p class="hero-number">16</p>
@@ -36,19 +36,10 @@
                         <p class="hero-rest">food trucks</p> 
                     </div>
 
-                    <!-- <ul class="hero-small-list list">
-                        <li class="hero-small-item">
-                            <p class="hero-number">16</p>
-                            <p class="hero-rest">cafes</p>
-                        </li>
-                        <li class="hero-small-item">
-                            <p class="hero-number">23</p>
-                            <p class="hero-rest">food trucks</p>
-                        </li>
-                    </ul> -->
+                    
                 </div>
                 
-                <!-- END Валентина -->
+                <!-- END COUNT -->
 
             </div> 
 
