--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -176,6 +176,12 @@
   
 // Валентина
 
+.coutn-wraper {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
 .first-count {
   // border: dashed red;
 
