--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="how_made">
   <div class="about-wrapper">
     <div class="container">
       <p class="about-label">tradition and love</p>
