--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,4 +1,4 @@
-<section class="header-hero">
+<section class="header-hero" id="home">
   <header class="header">
     <div class="container-box">
       <div class="hero-section">
@@ -19,7 +19,7 @@
                 </li>
                 <li class="navigation-list-item">
                   <!-- <a class="nav link" href="#gallery">About us</a> -->
-                  <a class="nav link" href="##about_us">About us</a>
+                  <a class="nav link" href="#about_us">About us</a>
                 </li>
                 <li class="navigation-list-item">
                   <a class="nav link" href="#how_made">How it’s made?</a>
@@ -275,7 +275,7 @@
       </li>
       <li class="mobil-item">
         <!-- <a class="mobil-link link" id-Exit2 href="#gallery">About us</a> -->
-        <a class="mobil-link link" id-Exit2 href="#About_us">About us</a>
+        <a class="mobil-link link" id-Exit2 href="#about_us">About us</a>
       </li>
       <li class="mobil-item">
         <a class="mobil-link link" id-Exit3 href="#how_made">How it’s made?</a>
