--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,81 +1,75 @@
-
-
-<section class="products">
+<section class="products" id="our_products">
   <div class="container">
-  <div class="products-ice-cream-title">
-    <p class="products-benefit">100% natural</p>
-    <h2 class="products-title">products</h2>
-
-  </div>
-
-  <ul class="products-list">
-    <li class="products-item list ice-cream">
-      <div class="products-img">
-        <h3 class="products-subtitle ice-cream">ice cream</h3>
-      </div>
-
-      <div class="products-svg-ice-cream">
-        <p class="products-ice-cream-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-      </div>
-<div class="dropdown-menu">
-      <button class="products-btn">
-        <svg class="products-ice-cream-icon">
-          <use href="./images/sprite.svg#right"></use>
-        </svg>
-      </button>
-    <p class="dropdown-description">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-Id libero porro repellendus quis in error ullam asperiores, 
-dolorem nesciunt non, beatae magnam architecto ad impedit est, 
-deserunt delectus minus earum!
-    </p>
-    
-    
-    
+    <div class="products-ice-cream-title">
+      <p class="products-benefit">100% natural</p>
+      <h2 class="products-title">products</h2>
     </div>
-    </li>
-    <li class="products-item list ice-coffee">
-      <div class="products-img">
-        <h3 class="products-subtitle ice-coffee">ice coffee</h3>
-      </div>
 
-      <div class="products-svg-ice-cream">
-        <p class="products-ice-cream-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-      </div>
+    <ul class="products-list">
+      <li class="products-item list ice-cream">
+        <div class="products-img">
+          <h3 class="products-subtitle ice-cream">ice cream</h3>
+        </div>
 
-      <button class="products-btn">
-        <svg class="products-ice-cream-icon">
-          <use href="./images/sprite.svg#right"></use>
-        </svg>
-      </button>
-    </li>
-    <li class="products-item list milkshakes">
-      <div class="products-img">
-        <h3 class="products-subtitle milkshakes">milkshakes</h3>
-      </div>
+        <div class="products-svg-ice-cream">
+          <p class="products-ice-cream-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+        </div>
+        <div class="dropdown-menu">
+          <button class="products-btn">
+            <svg class="products-ice-cream-icon">
+              <use href="./images/sprite.svg#right"></use>
+            </svg>
+          </button>
+          <p class="dropdown-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id libero
+            porro repellendus quis in error ullam asperiores, dolorem nesciunt
+            non, beatae magnam architecto ad impedit est, deserunt delectus
+            minus earum!
+          </p>
+        </div>
+      </li>
+      <li class="products-item list ice-coffee">
+        <div class="products-img">
+          <h3 class="products-subtitle ice-coffee">ice coffee</h3>
+        </div>
 
-      <div class="products-svg-ice-cream">
-        <p class="products-ice-cream-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-      </div>
+        <div class="products-svg-ice-cream">
+          <p class="products-ice-cream-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+        </div>
 
-      <button class="products-btn">
-        <svg class="products-ice-cream-icon">
-          <use href="./images/sprite.svg#right"></use>
-        </svg>
-      </button>
-    </li>
-  </ul>
+        <button class="products-btn">
+          <svg class="products-ice-cream-icon">
+            <use href="./images/sprite.svg#right"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="products-item list milkshakes">
+        <div class="products-img">
+          <h3 class="products-subtitle milkshakes">milkshakes</h3>
+        </div>
 
-</div>
+        <div class="products-svg-ice-cream">
+          <p class="products-ice-cream-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+        </div>
+
+        <button class="products-btn">
+          <svg class="products-ice-cream-icon">
+            <use href="./images/sprite.svg#right"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </div>
 </section>
-
-
