--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -58,8 +58,7 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: $text-white-color;
-    margin-bottom: 30px;
-	  margin-top: 30px;
+    margin: 30px 10px;
   }
 
   &-item {
@@ -237,7 +236,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: rgb(219, 236, 220);
+    background-color: cornflowerblue;
     min-width: 100%;
     height: 50%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
